--- a/bgchanger/bg-changer/package.json
+++ b/bgchanger/bg-changer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "bg-changer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -18,7 +17,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react-swc": "^3.8.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
